HFP-2860 Fix BG color + overflow

--- a/styles/scss/cke-contents.scss
+++ b/styles/scss/cke-contents.scss
@@ -7,9 +7,13 @@ code {
   padding: 0 5px;
 }
 pre > code {
+  background-color: #d1d1d1;
   padding: 5px;
   display: block;
   line-height: normal;
   border: 1px solid #c7c7c7;
   border-left-width: 4px;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: auto;
 }
